Mobile product page improvements: avoid image ratio issues + avoid jumping when opening mobile product + back button closes product when mobile product is open

--- a/src/app/product-page/product-page.component.scss
+++ b/src/app/product-page/product-page.component.scss
@@ -2,13 +2,13 @@
 @import "src/style/typography";
 
 .product-page {
-  position: fixed;
+  position: absolute;
   top: 45px;
   height: calc(100% - 45px);
   background: transparent;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
 }
 
@@ -27,23 +27,13 @@
 }
 
 .product-image-wrapper {
-  max-width: 70%;
-  max-height: 70%;
-  margin-bottom: 70px;
+  max-width: 60%;
 }
 
 .product-image {
   width: 100%;
-  height: 100%;
   border: 10px solid #d4c36c;
   cursor: pointer;
-}
-
-.product-info {
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-  margin-top: 16px;
 }
 
 .product-title {
@@ -64,36 +54,4 @@
 
 .product-name, .product-price, .product-description {
   cursor: pointer;
-}
-
-// Screens with very small height (e.g. phone in landscape view)
-
-@media screen and (max-height: 700px) {
-  .sun-image img, .moon-image img {
-    max-height: 10vh;
-  }
-}
-
-@media screen and (max-height: 500px) {
-  .sun-image img {
-    max-height: 80px;
-    position: absolute;
-    left: 20px;
-    top: 50%;
-    transform: translateY(-50%);
-  }
-
-  .moon-image img {
-    max-height: 80px;
-    position: absolute;
-    right: 20px;
-    top: 50%;
-    transform: translateY(-50%);
-  }
-}
-
-@media screen and (max-height: 500px) and (max-width: 450px) {
-  .sun-image img, .moon-image img {
-    display: none;
-  }
 }
